@@ -112,6 +112,14 @@ public abstract class DefUnit extends ASTNode {
 		return getName();
 	}
 	
+	/** @return the extended name of this defUnit. 
+	 * The extended name is the name of the defunit plus additional addornments(can contain spaces) that
+	 * allow to disambiguate this defUnit from homonym defUnits in the same scope (for example function parameters).
+	 */
+	public String getExtendedName() {
+		return getName();
+	}
+	
 	/** Returns signature-oriented String representation. TODO: this should move to UI code */
 	@Deprecated
 	public String toStringForHoverSignature() {
