@@ -3,13 +3,21 @@
 #@__CONTEXT_START__《
  ►/*Context start*/●
  ►void _dummy() {●
+ ►version(release) {●
+ ►pure {●
 ¤》
 
 #@__CONTEXT_END__《
  ►/*Context end*/●
  ►}●
+ ►}●
+ ►}●
 ¤》(__CONTEXT_START__)
+
+
 
 #@SPACE_Opt《 ●》
 #@SPACE_Opt2《 ●》
 
+
+#@TPLPARAMS_OPT《●(T, U : T[])》
