@@ -1,0 +1,23 @@
+Ⓗ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+
+int Var; 
+auto VarAuto;
+
+int Var1, Var2, Var3;
+int VarAuto1 = int, VarAuto2 = bar;
+
+int /*SYNTAX-ERROR*/;
+auto /*SYNTAX-ERROR*/;
+
+#REFSEARCH:
+Var
+VarAuto
+Var1
+
+VarAuto1
+
+#comment(TODO):
+Var2
+Var3
+VarAuto2
