@@ -9,9 +9,7 @@
 	debug(tests /* SYNTAX ERROR */
 }
 
-#@__CONTEXT_START__
-	#@REFSEARCH_TEST【#REFSEARCH¤【f1▪f2▪duplicate▪nested▪f3▪f4】】
-#@__CONTEXT_END__
+#@REFSEARCH_TEST【#REFSEARCH¤【f1▪f2▪duplicate▪nested▪f3▪f4】】
 
 #@NONSCOPED_CONTAINERS {
 	#@REFSEARCH_TEST  // test ref from within container
@@ -39,9 +37,7 @@ debug(tests)  /* SYNTAX ERROR */
 		int else_nested;
 }
 
-#@__CONTEXT_START__
-	#@REFSEARCH_TEST【#REFSEARCH¤【f1▪f2▪duplicate▪nested▪else_f1▪else_nested▪f3▪else_f3▪f4▪else_f4】】
-#@__CONTEXT_END__
+#@REFSEARCH_TEST【#REFSEARCH¤【f1▪f2▪duplicate▪nested▪else_f1▪else_nested▪f3▪else_f3▪f4▪else_f4】】
 
 #@NONSCOPED_CONTAINERS {
 	int f3;
@@ -59,9 +55,7 @@ debug(tests)  /* SYNTAX ERROR */
 
 ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂ the ":" body syntax
 
-#@__CONTEXT_START__
-	#@REFSEARCH_TEST【#REFSEARCH¤【f1▪f2▪duplicate▪nested】】
-#@__CONTEXT_END__
+#@REFSEARCH_TEST【#REFSEARCH¤【f1▪f2▪duplicate▪nested】】
 
 #@NONSCOPED_CONTAINERS #?ENUM_ATTRIB{#:DISCARD_CASE} :
 	int f1; int f2;
